--- a/buy-premium.html
+++ b/buy-premium.html
@@ -54,6 +54,17 @@
                     Copy ID
                 </button>
             </div>
+            <!-- UPI Payment Card -->
+<div class="glass-card p-8 rounded-2xl flex flex-col items-center">
+    <h2 class="text-2xl font-bold mb-2">UPI</h2>
+    <p class="mb-4 text-lg">UPI ID: <span class="payment-detail" id="upi-id">erenxiter@upi</span></p>
+    <button class="copy-btn" onclick="copyToClipboard('upi-id')">
+        <svg xmlns='http://www.w3.org/2000/svg' class='w-5 h-5' fill='none' viewBox='0 0 24 24' stroke='currentColor'>
+            <path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 16h8M8 12h8m-8-4h8M4 6h16M4 6v12a2 2 0 002 2h12a2 2 0 002-2V6'/>
+        </svg>
+        Copy ID
+    </button>
+</div>
             <!-- Bank Payment Card -->
             <div class="glass-card p-8 rounded-2xl flex flex-col items-center">
                 <h2 class="text-2xl font-bold mb-2">Bank Payment</h2>
@@ -101,3 +112,4 @@
     </script>
 </body>
 </html> 
+
